--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "next": "^10.0.9",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "typescript": "^4.2.3"
